* ADD:SOC Materials * ADD:Импортер DDS

--- a/fs_soc.ltx
+++ b/fs_soc.ltx
@@ -1,7 +1,7 @@
 ;abbreviation               = recurs|notif|  root|                        add|            ext|                  description
 $sdk_root$			= false| false| $fs_root$
 $local_root$		= false| false| $sdk_root$
-$server_data_root$          = false| false|  $fs_root$|rawdata\
+$server_data_root$          = false| false|  $fs_root$|rawdata_soc\
 $server_backup$             = true|  false| $server_data_root$|     backup\
 $server_root$    		       = false|		true|	\
 $app_data_root$			    = true|		false|	$server_root$|			_appdata_soc_\
