--- a/fs.ltx
+++ b/fs.ltx
@@ -2,9 +2,10 @@
 $sdk_root$			= false| false| $fs_root$
 $local_root$		= false| false| $sdk_root$
 $server_data_root$          = false| false|  $fs_root$|rawdata\
+$unreal_saves$           = true|  false| $fs_root$|      Saved\
+$app_data_root$         = true|  false| $unreal_saves$|  COP\
 $server_backup$             = true|  false| $server_data_root$|     backup\
-$server_root$    		       = false|		true|	\
-$app_data_root$			    = true|		false|	$server_root$|			_appdata_\
+$server_root$    		       = false|		true|	$fs_root$
 $game_data$                 = false| true|   $fs_root$| gamedata\
 $game_ai$               = true|  false| $game_data$|          ai\
 $game_spawn$                = true|  false| $game_data$|            spawns\
@@ -36,4 +37,4 @@ $omotion$                   = true|  true|  $import$|               |           
 $omotions$                  = true|  true|  $import$|               |                *.anms|         Object animation list files
 $smotion$                   = true|  true|  $import$|               |                *.skl;*.skls|   Skeleton motion files
 $sbones$                    = true|  true|  $import$|               |                *.bones|               Skeleton bone data files
-$game_saves$                = false| true| $fs_root$| savedgames\
+$game_saves$            = true|  false| $app_data_root$|       savedgames\
