--- a/fs_cs.ltx
+++ b/fs_cs.ltx
@@ -3,8 +3,9 @@ $sdk_root$			= false| false| $fs_root$
 $local_root$		= false| false| $sdk_root$
 $server_data_root$          = false| false|  $fs_root$|rawdata_cs\
 $server_backup$             = true|  false| $server_data_root$|     backup\
-$server_root$    		       = false|		true|	\
-$app_data_root$			    = true|		false|	$server_root$|			_appdata_cs_\
+$server_root$    		       = false|		true|	$fs_root$
+$unreal_saves$           = true|  false| $fs_root$|      Saved\
+$app_data_root$         = true|  false| $unreal_saves$|  CS\
 $game_data$                 = false| true|   $fs_root$| gamedata_cs\
 $game_ai$               = true|  false| $game_data$|          ai\
 $game_spawn$                = true|  false| $game_data$|            spawns\
@@ -36,4 +37,4 @@ $omotion$                   = true|  true|  $import$|               |           
 $omotions$                  = true|  true|  $import$|               |                *.anms|         Object animation list files
 $smotion$                   = true|  true|  $import$|               |                *.skl;*.skls|   Skeleton motion files
 $sbones$                    = true|  true|  $import$|               |                *.bones|               Skeleton bone data files
-$game_saves$                = false| true| $fs_root$| savedgames\
+$game_saves$                = false| true| $app_data_root$| savedgames\
