--- a/fsgame_soc.ltx
+++ b/fsgame_soc.ltx
@@ -1,5 +1,6 @@
 ;abbreviation           = recurs|notif|  root|                  add|        ext|            description
-$app_data_root$         = true|  false| $fs_root$|            _appdata_soc_\
+$unreal_saves$           = true|  false| $fs_root$|      Saved\
+$app_data_root$         = true|  false| $unreal_saves$|  SOC\
 $arch_dir$              = false| false| $fs_root$
 $game_arch_mp$          = false| false| $fs_root$|            mp\
 $arch_dir_levels$       = false| false| $fs_root$|            levels\
@@ -22,5 +23,5 @@ $level$                 = false| false| $game_levels$
 $game_scripts$          = true|  false| $game_data$|          scripts\|      *.script|      Game script files
 $logs$                  = true|  false| $app_data_root$|      logs\
 $screenshots$           = true|  false| $app_data_root$|      screenshots\
-$game_saves$            = true|  false| $app_data_root$|      savedgames\
+$game_saves$            = true|  false| $app_data_root$|       savedgames\
 $downloads$             = false| false| $app_data_root$
