--- a/gamedata_soc/config/system.ltx
+++ b/gamedata_soc/config/system.ltx
@@ -497,6 +497,7 @@ immunity_factor				= 1.3	    ;hit power multiplier
 
 [climable_object]
 class						= O_CLMBL
+$spawn 			=           "editor\climable_object"
 
 [zone_team_base]
 $spawn 			= "network\team base"
