* FIX: стартовое время в тч теперь 6 утра

--- a/gamedata_soc/config/alife.ltx
+++ b/gamedata_soc/config/alife.ltx
@@ -117,12 +117,12 @@
     schedule_max				= 1												; milliseconds
     process_time				= 900											; microseconds
     update_monster_factor		= 0.1
-    time_factor					= 10;	1;	;396.0;скорость для демонстрации смены дня и ночи		
-    normal_time_factor			= 10;	животные в оффлайне перемещаются со скоростью, делённой на этот фактор (чтобы не бегали очень быстро)
+    time_factor					= 10;	1;	;396.0;СЃРєРѕСЂРѕСЃС‚СЊ РґР»СЏ РґРµРјРѕРЅСЃС‚СЂР°С†РёРё СЃРјРµРЅС‹ РґРЅСЏ Рё РЅРѕС‡Рё		
+    normal_time_factor			= 10;	Р¶РёРІРѕС‚РЅС‹Рµ РІ РѕС„С„Р»Р°Р№РЅРµ РїРµСЂРµРјРµС‰Р°СЋС‚СЃСЏ СЃРѕ СЃРєРѕСЂРѕСЃС‚СЊСЋ, РґРµР»С‘РЅРЅРѕР№ РЅР° СЌС‚РѕС‚ С„Р°РєС‚РѕСЂ (С‡С‚РѕР±С‹ РЅРµ Р±РµРіР°Р»Рё РѕС‡РµРЅСЊ Р±С‹СЃС‚СЂРѕ)
     max_combat_iteration_count	= 5	;10											; maximum combat iteration count
     switch_distance				= 150;0	;150	;75.0											; metres
     switch_factor				= 0.1											; 
-    start_time					= 05:30:00	;16:30:00
+    start_time					= 06:00:00	;16:30:00
     start_date					= 01.05.2012
     autosave_interval			= 01:05:00
     delay_autosave_interval		= 00:00:30
