* FIX: -game режим для редактора не работал

--- a/fsgame.ltx
+++ b/fsgame.ltx
@@ -1,5 +1,5 @@
 ;abbreviation           = recurs|notif|  root|                  add|        ext|            description
-$unreal_saves$           = true|  false| $fs_root$|      Saved\
+$unreal_saves$           = false|  false| $fs_root$|      Saved\
 $app_data_root$         = true|  false| $unreal_saves$|  COP\
 $arch_dir$              = false| false| $fs_root$
 $game_arch_mp$          = false| false| $fs_root$|            mp\
