* EDIT: Normals optimized

--- a/gamedata_soc/config/creatures/m_stalker.ltx
+++ b/gamedata_soc/config/creatures/m_stalker.ltx
@@ -314,7 +314,7 @@ min_wound_size				= 0.01
 
 [stalker]:common_ph_friction_params_on_npc_death
 class							= AI_STL_S						; Class identifier
-
+unreal_proxy					= /Game/Base/Blueprints/BP_Stalker.BP_Stalker_C
 can_select_items				= on
 
 ;---EVALUATION FUNCTIONS----------------------------------------------
